// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News Component renders correctly the newsData 1`] = `
<div>
  <a
    href="www.apple.com/news/1"
  >
    <Styled(span)
      link={true}
    >
      <Truncate
        ellipsis="…"
        lines={2}
        trimWhitespace={true}
        width={0}
      >
        Not Fake News
      </Truncate>
    </Styled(span)>
  </a>
  <Styled(span)
    grey={true}
    small={true}
  >
    20/10/2018
     - 
    Seeking beta
  </Styled(span)>
</div>
`;

exports[`NewsItems Component renders correctly news pending 1`] = `
<Styled(span)
  grey={true}
  small={true}
>
  ...Loading...
</Styled(span)>
`;

exports[`NewsItems Component renders correctly on fetch status of fail 1`] = `
<Styled(span)
  grey={true}
  small={true}
>
  Cannot load data, check internet connection
</Styled(span)>
`;

exports[`NewsItems Component renders correctly on fetch status of success and display newsItems 1`] = `
<Styled(div)>
  <Component
    key="www.apple.com/news/1"
    newsData={
      Object {
        "datetime": "20/10/2018",
        "headline": "Not Fake News",
        "source": "Seeking beta",
        "url": "www.apple.com/news/1",
      }
    }
  />
  <Component
    key="www.apple.com/news/2"
    newsData={
      Object {
        "datetime": "20/10/2018",
        "headline": "All eyes on treasury",
        "source": "SeekingAlpha",
        "url": "www.apple.com/news/2",
      }
    }
  />
  <Component
    key="www.apple.com/news/3"
    newsData={
      Object {
        "datetime": "20/10/2018",
        "headline": "Apple won the fight against Apple",
        "source": "Seeking beta",
        "url": "www.apple.com/news/3",
      }
    }
  />
  <Component
    key="www.apple.com/news/4"
    newsData={
      Object {
        "datetime": "20/10/2018",
        "headline": "Apple won the fight against Apple",
        "source": "Seeking beta",
        "url": "www.apple.com/news/4",
      }
    }
  />
  <Component
    key="www.apple.com/news/5"
    newsData={
      Object {
        "datetime": "20/10/2018",
        "headline": "Apple won the fight against Apple",
        "source": "Seeking beta",
        "url": "www.apple.com/news/5",
      }
    }
  />
</Styled(div)>
`;
